--- a/src/ui/app/context/AppRadialMenuContext.pug
+++ b/src/ui/app/context/AppRadialMenuContext.pug
@@ -3,12 +3,6 @@ script.
 
 	active = false
 	choice = null
-	menu = null
-	menu_variant = null
-	position = null
-	radius = 21
-	target_element = null
-
 	get_modifier_keys = (event) ->
 		modifier_keys = []
 		if event.altKey
@@ -20,6 +14,12 @@ script.
 		if modifier_keys.length > 0
 			return modifier_keys.join('_')
 		return 'unmodified'
+	menu = null
+	menu_variant = null
+	position = null
+	radius = 21
+	target_element = null
+	x_correction = document.documentElement.offsetLeft # adjust for broken fixed positioning when using scrollbar-gutter: stable (Chromium bug #1251856)
 
 	document.addEventListener('contextmenu',
 		(event) ->
@@ -31,8 +31,8 @@ script.
 						when 2 then 'E'
 						when 3 then 'S'
 						when 4 then 'W'
-					final_choice = menu[menu_direction]?[menu_variant](target_element.dataset)
-					target_element.dispatchEvent(new CustomEvent('radialmenu', { detail: final_choice.value }))
+					final_choice = menu[menu_variant]?(target_element.dataset)?[menu_direction]
+					target_element.dispatchEvent(new CustomEvent('radialmenu', { detail: final_choice?.action }))
 				choice = null
 				menu_variant = null
 				menu = null
@@ -40,36 +40,36 @@ script.
 				position = null
 				active = false
 	)
-
 	document.addEventListener('keydown',
 		(event) ->
 			if active
 				menu_variant = get_modifier_keys(event)
 	)
-
 	document.addEventListener('keyup',
 		(event) ->
 			if active
 				menu_variant = get_modifier_keys(event)
 	)
-
 	document.addEventListener('mousedown',
 		(event) ->
 			if event.button is 2 and event.detail > 0 # right button, real event
+				if !window.getSelection().isCollapsed and (window.getSelection().focusNode.parentElement == event.target)
+					return # if selecting text inside clicked element, allow default browser behavior
+				if event.target.tagName is 'A'
+					return # if clicking link, allow default browser behavior
 				element = event.target.closest("[data-radial-menu]")
 				if element
 					target_element = element
 					menu = available_menus[target_element.dataset.radialMenu]
 					menu_variant = get_modifier_keys(event)
 					choice = 0
-					position = [event.x, event.y]
+					position = [event.x - x_correction, event.y] 
 					active = true
 	)
-
 	document.addEventListener('mousemove',
 		(event) ->
 			if active
-				delta_x = event.x - position[0]
+				delta_x = event.x - position[0] - x_correction
 				delta_y = event.y - position[1]
 				if Math.abs(delta_x) < radius and Math.abs(delta_y) < radius
 					choice = 0
@@ -87,22 +87,25 @@ script.
 	)
 
 slot
-{#if active}
-	menu.radial-menu(style='height: {radius * 2}px; left: {position[0] - radius}px; top: {position[1] - radius}px; width: {radius * 2}px') 🗙
-		figure.radial-menu-icon.radial-menu-icon-north(class:radial-menu-icon-selected={choice === 1}) {menu.N[menu_variant]?.(target_element.dataset).icon || ''}
-		figure.radial-menu-icon.radial-menu-icon-east(class:radial-menu-icon-selected={choice === 2}) {menu.E[menu_variant]?.(target_element.dataset).icon || ''}
-		figure.radial-menu-icon.radial-menu-icon-south(class:radial-menu-icon-selected={choice === 3}) {menu.S[menu_variant]?.(target_element.dataset).icon || ''}
-		figure.radial-menu-icon.radial-menu-icon-west(class:radial-menu-icon-selected={choice === 4}) {menu.W[menu_variant]?.(target_element.dataset).icon || ''}
+{#if active && menu[menu_variant]?.(target_element.dataset)}
+	{@const choices = menu[menu_variant](target_element.dataset)}
+		menu.radial-menu(style='height: {radius * 2}px; left: {position[0] - radius}px; top: {position[1] - radius}px; width: {radius * 2}px')
+			span.radial-menu-graphic-center 🗙
+			figure.radial-menu-icon.radial-menu-icon-north(class:radial-menu-icon-selected={choice === 1}) {choices.N?.icon || ''}
+			figure.radial-menu-icon.radial-menu-icon-west(class:radial-menu-icon-selected={choice === 4}) {choices.W?.icon || ''}
+			figure.radial-menu-icon.radial-menu-icon-east(class:radial-menu-icon-selected={choice === 2}) {choices.E?.icon || ''}
+			figure.radial-menu-icon.radial-menu-icon-south(class:radial-menu-icon-selected={choice === 3}) {choices.S?.icon || ''}
 
 style.
 	.radial-menu
 		align-items center
-		color salmon
 		cursor default
 		display flex
 		font-size 1.5em
 		justify-content center
 		position fixed
+	.radial-menu-graphic-center
+		color var(--c-hint-normal)
 	.radial-menu-icon
 		align-items center
 		display flex
