--- a/src/ui/app/routing/AppRouter.pug
+++ b/src/ui/app/routing/AppRouter.pug
@@ -1,17 +1,23 @@
 script.
 	import { setContext } from 'svelte'
+
 	import AppContexts from '../context/AppContexts.pug'
-	import AppContent from './AppContent.pug'
 	import AppExternalLink from './AppExternalLink.pug'
+	import Collection from '../../feature/collection/Collection.pug'
+	import Directory from '../../feature/directory/Directory.pug'
+	import Duplicates from '../../feature/duplicates/Duplicates.pug'
+	import Messages from '../../feature/message/Messages.pug'
+	import Multireddit from '../../feature/multireddit/Multireddit.pug'
+	import Post from '../../feature/post/Post.pug'
+	import Subreddit from '../../feature/subreddit/Subreddit.pug'
+	import User from '../../feature/user/User.pug'
+	import Wiki from '../../feature/wiki/Wiki.pug'
 	import { parse_url } from './url.coffee'
 
-	route = {}
-	set_route_from_current_url = ->
-		# Copy route from URL, but (statefully) keep the current feed unless the new route requires a different one.
-		new_route = parse_url(location)
-		if !new_route.feed
-			new_route.feed = route.feed
-		route = new_route
+	feed = null
+	page = null
+	post = null
+	wiki = null
 	
 	external_navigate =
 		(link) -> location.href = link.href
@@ -35,6 +41,8 @@ script.
 		(event) -> is_unmodified_event(event) and event.button is 0 and event.detail > 0
 	is_unmodified_enter_key_on_link =
 		(event) -> is_unmodified_event(event) and event.key is 'Enter' and event.target.tagName is 'A'
+	set_route_from_current_url = ->
+		{ feed, page, post, wiki } = parse_url(location)
 
 	document.addEventListener('mousedown',
 		(event) ->
@@ -77,7 +85,35 @@ script.
 	set_route_from_current_url()
 
 AppContexts
-	{#if route.external}
-		AppExternalLink(original_url={location})
+	{#if page === 'collection'}
+		{#key feed.collection_id}
+			Collection(id={feed.collection_id})
+	{:else if page === 'directory'}
+		Directory
+	{:else if page === 'duplicates'}
+		{#key feed.duplicate_post_id}
+			Duplicates(post_id={feed.duplicate_post_id})
+	{:else if page === 'messages'}
+		Messages
+	{:else if page === 'multireddit'}
+		{#key feed.multireddit_name}
+			{#key feed.user_name}
+				Multireddit(name={feed.multireddit_name} search={feed.search} sort={feed.sort} time_range={feed.time_range} user_name={feed.user_name})
+	{:else if page === 'post'}
+		{#key post.id}
+			{#key post.focus_comment_id}
+				{#key post.focus_comment_parent_count}
+					Post(comments_sort={post.comments_sort} expanded={true} focus_comment_parent_count={post.focus_comment_parent_count} focus_comment_id={post.focus_comment_id} id={post.id})
+	{:else if page === 'subreddit'}
+		{#key feed.subreddit_name}
+			Subreddit(name={feed.subreddit_name} search={feed.search} sort={feed.sort} time_range={feed.time_range})
+	{:else if page === 'user'}
+		{#key feed.user_name}
+			User(name={feed.user_name} sort={feed.sort} time_range={feed.time_range})
+	{:else if page === 'wiki'}
+		{#key wiki.subreddit_name}
+			{#key wiki.page_name}
+				{#key wiki.page_version}
+					Wiki(page_name={wiki.page_name} revision_id={wiki.page_version} subreddit_name={wiki.subreddit_name})
 	{:else}
-		AppContent(feed={route.feed} post={route.post} wiki={route.wiki})
+		AppExternalLink(original_url={location})
