--- a/src/ui/feature/comment/CommentEditor.pug
+++ b/src/ui/feature/comment/CommentEditor.pug
@@ -1,20 +1,21 @@
 script.
 	import { createEventDispatcher } from 'svelte'
+	
 	import Button from '../../common/Button.pug'
 	import Label from '../../common/Label.pug'
 
 	export error = null
 	export initial_text = ''
 	export sending = false
-	dispatch = createEventDispatcher()
-	textbox = null
 
+	dispatch = createEventDispatcher()
 	submit = ->
 		text = textbox.innerText
 		if text.length > 10000
 			error = { message: 'max length is 10,000 chars' }
 		if !error
 			dispatch('submit', text)
+	textbox = null
 
 form.comment-editor
 	<!-- svelte-ignore a11y-autofocus -->
@@ -29,14 +30,13 @@ style.
 		display inline-flex
 		flex-flow column nowrap
 		gap 6px
-		margin 0.666em 1em
+		margin 0.666em 0
 		position relative
 	.comment-editor-text-field
-		border 1px solid var(--c-subreddit-theme)
-		border-radius 12px
-		color var(--c-subreddit-theme-text)
+		border 1px solid var(--c-score-0)
+		border-radius 1em
 		font 13px monospace
 		line-height inherit
-		padding 12px
+		padding 1em
 		resize none
 		width 360px
