--- a/src/ui/feature/menu/BanMenu.pug
+++ b/src/ui/feature/menu/BanMenu.pug
@@ -1,5 +1,6 @@
 script.
 	import { createEventDispatcher } from 'svelte'
+	
 	import TextInput from '../../common/TextInput.pug'
 
 	ban_lengths = [
@@ -15,8 +16,7 @@ script.
 
 form.ban-menu
 	fieldset.ban-menu-message-to-user
-		TextInput(placeholder='Enter message to user (optional)' type_action={value => message_input_value = value})
-		span.ban-menu-hint ...and then click a ban duration:
+		TextInput(autofocus={true} placeholder='Message for user...' type_action={value => message_input_value = value})
 	fieldset.ban-menu-durations
 		{#each ban_lengths as duration}
 			label.ban-menu-duration
