--- a/src/ui/feature/post/PostComments.pug
+++ b/src/ui/feature/post/PostComments.pug
@@ -1,12 +1,12 @@
 script.
-	import { setContext } from 'svelte';
-	import api from '../../../api/index.js'
+	import { setContext } from 'svelte'
 
+	import api from '../../../api/index.js'
 	import Button from '../../common/Button.pug'
 	import Comment from '../comment/Comment.pug'
 	
-	export focus_comment_parent_count = null
 	export focus_comment_id = null
+	export focus_comment_parent_count = null
 	export initial_count = null
 	export post_id = null
 	export sort = null
@@ -17,7 +17,7 @@ script.
 	
 	if focus_comment_id
 		setContext('focus_comment_id', focus_comment_id)
-	
+
 	api.loadWatch(api.ID('post', post_id, sort or 'confidence', initial_count, focus_comment_id, focus_comment_parent_count), (x) ->
 		{ data: post, loading } = x
 		if post?.more_replies
@@ -28,14 +28,14 @@ script.
 
 {#if post}
 	{#if !post.replies.length}
-		.post-comments-empty-notification [ No comments. ]
+		.post-comments-empty-notification No comments yet.
 	{:else}
 		ol
 			{#each post.replies as reply_id (reply_id)}
 				Comment(id={reply_id})
 			{#if post.num_more_replies > 0}
 				.post-more-replies
-					Button(action={() => api.load(post.more_replies_id)} icon_plus={true} loading={more_replies_loading} text="{post.num_more_replies} more")
+					Button(action={() => api.load(post.more_replies_id)} loading={more_replies_loading} text="+ {post.num_more_replies} {post.num_more_replies === 1 ? 'reply' : 'replies'}")
 {:else if loading}
 	.post-comments-loading-notification Loading...
 
