--- a/src/ui/feature/wiki/Wiki.pug
+++ b/src/ui/feature/wiki/Wiki.pug
@@ -1,10 +1,12 @@
 script.
 	import { tick } from 'svelte'
+
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
-
-	import FeedAvatar from '../feed/FeedAvatar.pug'
+	
+	import ErrorMessage from '../../common/ErrorMessage.pug'
 	import FormattedHTML from '../../common/FormattedHTML.pug'
+	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
 	
 	export page_name = null
 	export revision_id = null
@@ -13,6 +15,7 @@ script.
 	error = null
 	loading = false
 	page = null
+
 	api.loadWatch(api.ID('wiki', subreddit_name, page_name, revision_id),
 		(x) ->
 			{ data: page, error, loading } = x
@@ -25,17 +28,14 @@ script.
 	)
 
 svelte:head
-	title {subreddit_name} / wiki / {page_name}
+	title {subreddit_name} (wiki) / {page_name}
 {#if error}
-	.wiki-unavailable-reason
-		p Wiki page unavailable.
-		{#if error.reason}
-			p Reason: {error.reason}
+	ErrorMessage(error={error} object='wiki' scope='total')
 {:else if loading}
 	p Loading...
 {:else if page}
 	article.wiki
-		FeedAvatar(subreddit_name={subreddit_name} type='subreddit_posts')
+		SubredditAvatar(name={subreddit_name})
 		section.wiki-path
 			a(href='/{subreddit_name}/wiki') Wiki
 			{#each page_name.split('/') as path_segment, i}
@@ -48,8 +48,7 @@ svelte:head
 
 style.
 	.wiki
-		padding 4em 0
-		width 560px
+		width 480px
 	.wiki-body
 		margin-top 3em
 	.wiki-info
@@ -70,16 +69,19 @@ style.
 			text-decoration none
 	:global(.wiki .toc)
 		font-size 12px
-		left calc(50% + 360px)
+		left 0
+		letter-spacing 0.25pt
 		max-height 100vh
 		overflow auto
-		padding 80px 0
+		padding 4rem 0
 		position fixed
 		scrollbar-width none
 		top 0
 		width 320px
 		&::-webkit-scrollbar
 			display none
+	:global(.wiki .toc ~ *)
+		margin-top 0
 	:global(.wiki .toc a)
 		text-decoration none
 		&:hover
